--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 
 <head>
 	<meta charset="UTF-8">
+	<link rel="stylesheet" href="styleTest.css" />
 	<link rel="stylesheet" href="styleFicBody.css" />
 	<link rel="stylesheet" href="styleFicInfo.css" />
 	<link rel="stylesheet" href="styleSidePanel.css" />
@@ -163,11 +164,11 @@
 			</button>
 		</div>
 		<div class="ficBodyText">
-			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum enim nunc, aliquam sit amet quam vel,
-				aliquet
-				mollis lectus. Vestibulum rhoncus odio justo, sed rutrum lectus laoreet id. Ut non posuere felis. Aenean aliquet
-				ut
-				nunc ac posuere. Praesent dictum, arcu sit amet commodo tristique, est odio feugiat lacus, ac malesuada sem felis
+			<p>Lorem<sup class="tooltip">1<span class="tooltipText">Actually "Ipsum"</span></sup> 
+				ipsum<sup class="tooltip">2<span class="tooltipText">На самом деле "Lorem", но кому какое дело</span></sup> dolor sit amet,
+				 consectetur adipiscing elit. Vestibulum enim nunc, aliquam sit amet quam vel,
+				aliquet	mollis lectus. Vestibulum rhoncus odio justo, sed rutrum lectus laoreet id. Ut non posuere felis. Aenean aliquet
+				ut nunc ac posuere. Praesent dictum, arcu sit amet commodo tristique, est odio feugiat lacus, ac malesuada sem felis
 				non
 				nibh. Curabitur ipsum diam, congue id velit at, interdum tristique justo. Pellentesque habitant morbi tristique
 				senectus et netus et malesuada fames ac turpis egestas.</p>
